# itmo-cpp-sequence

./: CMakeLists.txt  Readme.md  seq_tests.cpp  sequence.h
